renaming post_to_facebook label

--- a/alpha/event/static/styles/modal.css
+++ b/alpha/event/static/styles/modal.css
@@ -33,6 +33,12 @@
     top:-3px;
 }
 
+.balloon.inline {
+    float: none;
+    display: inline-block;
+    vertical-align: middle;
+}
+
 .balloon.wheelchair {
     float:none;
     display:inline-block;
