--- a/alpha/event/templates/events/create/create_event.html
+++ b/alpha/event/templates/events/create/create_event.html
@@ -149,7 +149,7 @@
                                 </a>
                                 <div class="balloon-content">
                                     <h3>
-                                        Help - Enter event <i>[Event name]:</i>
+                                        Help for <i>[Event name]:</i>
                                     </h3>
                                     <p>
                                         Insert a name that will stand out
@@ -166,7 +166,7 @@
                                 </a>
                                 <div class="balloon-content">
                                     <h3>
-                                        Help - Enter event <i>[Owner]:</i>
+                                        Help for <i>[Owner]:</i>
                                     </h3>
                                     <p> 
                                         Choose account wich will be owner of this event
@@ -185,7 +185,7 @@
                                 </a>
                                 <div class="balloon-content">
                                     <h3>
-                                        Help - Enter event <i>[Location]:</i>
+                                        Help for <i>[Location]:</i>
                                     </h3>
                                     <p> 
                                         Type in the name of the venue. However, if you do not find your event, type it in manually by selecting “Suggest a New Venue”
@@ -238,7 +238,7 @@
                                 </a>
                                 <div class="balloon-content">
                                     <h3>
-                                        Help - Enter event
+                                        Help for
                                         <i>[when]:</i>
                                     </h3>
                                     <p>
@@ -260,7 +260,7 @@
                                 </a>
                                 <div class="balloon-content">
                                     <h3>
-                                        Help - Enter event
+                                        Help for
                                         <i>[enterance]:</i>
                                     </h3>
                                     <p>
@@ -282,7 +282,7 @@
                                 </a>
                                 <div class="balloon-content">
                                     <h3>
-                                        Help - Enter event
+                                        Help for
                                         <i>[Description]:</i>
                                     </h3>
                                     <p>
@@ -312,7 +312,7 @@
                                 </a>
                                 <div class="balloon-content">
                                     <h3>
-                                        Help - Enter event
+                                        Help for
                                         <i>[Website]:</i>
                                     </h3>
                                     <p>
@@ -389,7 +389,19 @@
                         </tr>
                         <tr>
                             <td colspan="2" class="wheelchair-td">
-                                Post to Facebook
+                                <a href="javascript:void(0);" class="balloon inline">
+                                    <div class="buttonq"></div>
+                                </a>
+                                <div class="balloon-content">
+                                    <h3>
+                                        Help for
+                                        <i>[Let post it to FaceBook ]:</i>
+                                    </h3>                                 
+                                    <p>
+                                        This option allows CityFusion to publish this Event also to FaceBook
+                                    </p>
+                                </div>
+                                Let CityFusion post it to FaceBook?                                
                                 <ul>
                                     <li>
                                         <div class="radio">
@@ -416,8 +428,8 @@
                                 </a>
                                 <div class="balloon-content">
                                     <h3>
-                                        Help - Enter your
-                                        <i>[comment]:</i>
+                                        Help for
+                                        <i>[Facebook comment]:</i>
                                     </h3>
                                     <p>
                                         Optional comment that will be attached to the description when
@@ -437,7 +449,7 @@
                                 </a>
                                 <div class="balloon-content">
                                     <h3>
-                                        Help - Enter your
+                                        Help for
                                         <i>[tags]:</i>
                                     </h3>
                                     <p>
@@ -463,7 +475,7 @@
                                 </a>
                                 <div class="balloon-content">
                                     <h3>
-                                        Help - Enter your
+                                        Help for
                                         <i>[tickets]:</i>
                                     </h3>
                                     <p>                                                        
@@ -484,7 +496,7 @@
                                 </a>
                                 <div class="balloon-content">
                                     <h3>
-                                        Help - Enter your
+                                        Help for
                                         <i>[image]:</i>
                                     </h3>
                                     <p>                                                        
