--- a/alpha/event/templates/events/create/create_event.html
+++ b/alpha/event/templates/events/create/create_event.html
@@ -389,6 +389,7 @@
                         </tr>
                         <tr>
                             <td colspan="2" class="wheelchair-td">
+                                Let CityFusion post it to FaceBook?                                
                                 <a href="javascript:void(0);" class="balloon inline">
                                     <div class="buttonq"></div>
                                 </a>
@@ -400,8 +401,7 @@
                                     <p>
                                         This option allows CityFusion to publish this Event also to FaceBook
                                     </p>
-                                </div>
-                                Let CityFusion post it to FaceBook?                                
+                                </div>                                
                                 <ul>
                                     <li>
                                         <div class="radio">
@@ -423,7 +423,7 @@
                         <tr>
                             <td>
                                 Facebook comment &nbsp;
-                                <a href="javascript:void(0);" class="balloon">
+                                <a href="javascript:void(0);" class="balloon inline">
                                     <div class="buttonq"></div>
                                 </a>
                                 <div class="balloon-content">
