--- a/alpha/home/templates/_main_navigation.html
+++ b/alpha/home/templates/_main_navigation.html
@@ -1,6 +1,9 @@
-{% block menuhead %}    
+{% block menuhead %}
+    <link href="{{STATIC_URL}}js/trip/trip.css" rel="stylesheet" type="text/css" />
+
     <script src="{{STATIC_URL}}js/event/purl.js" type="text/javascript"></script>    
     <script src="{{STATIC_URL}}js/event/query_filters.js" type="text/javascript"></script>    
+    <script src="{{STATIC_URL}}js/trip/trip.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/event/search_by_location.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/event/full_text_search.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/event/search.js" type="text/javascript"></script>
