--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -16,6 +16,8 @@
     <link href="{{ STATIC_URL }}styles/accounts/signin_signup.css" type="text/css" rel="stylesheet" media="all" />
 
 
+    {% include 'variables.html' %}
+
     <script type="text/javascript" src="{{STATIC_URL}}js/libs/underscore-min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-ui-1.8.23.custom.min.js"></script>
@@ -38,9 +40,7 @@
     <link href="{{STATIC_URL}}styles/browse/search_pad.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/search_tags.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/event_details.css" rel="stylesheet" type="text/css" />
-    <link href="{{ STATIC_URL }}js/trip/trip.css" type="text/css" rel="stylesheet" media="all" />
-
-    <script src="{{STATIC_URL}}js/trip/trip.js" type="text/javascript"></script>
+    
     <script src="{{STATIC_URL}}js/searchpad/event-actions.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/searchpad-popup.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/tagit.js" type="text/javascript"></script>    
@@ -52,7 +52,6 @@
     <script src="{{STATIC_URL}}js/searchpad/remind-me.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/event-actions.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/jump-to-date.js" type="text/javascript"></script>
-    {% include 'setup_location.html' %}
 
     {% block head %}
 
@@ -63,34 +62,6 @@
     {% block userena_head %}{% endblock %}
 </head>
 <body {% block body_attributes %}class="modern"{% endblock %}>
-<!--<div class="location-debug-panel">
-    <table>
-        <tr>
-            <td>ip</td>
-            <td>{{ ip }}</td>
-        </tr>
-        <tr>
-            <td>(latitude, longtitude)</td>
-            <td>{{ lat_lon }}</td>
-            <td>
-                <img src="http://maps.googleapis.com/maps/api/staticmap?center={{ lat_lon }}&zoom=10&size=600x300&sensor=false">
-
-            </td>
-        </tr>
-        <tr>
-            <td>IP Info</td>
-            <td>{{ ip_info }}</td>
-        </tr>        
-        <tr>
-            <td>user_location_id</td>
-            <td>{{ user_location_id }}</td>
-        </tr>
-        <tr>
-            <td>user_location_name</td>
-            <td>{{ user_location_name }}</td>
-        </tr>
-    </table>
-</div>-->    
 {% if messages %}
     <ul class="messages">
         {% for message in messages %}
@@ -133,7 +104,7 @@
 
     <div class="footer-wrapper" data-no-turbolink>
         <div class="footer-container">
-            {% block advertising_footer %}{% endblock %}            
+            {% block advertising_footer %}{% endblock %}
         </div>
     </div>
 
@@ -178,6 +149,4 @@
 {% load analytics %}
 {% googleanalyticsjs %}
 </body>
-
-
 </html>
