--- a/alpha/accounts/templates/userena/profile_detail.html
+++ b/alpha/accounts/templates/userena/profile_detail.html
@@ -69,7 +69,7 @@
                             </li>
                         {% endif %}
                         <li>
-                            <a href="{% url 'user_profile_edit' profile.user.username %}">Edit my Account</a>
+                            <a href="{% url 'userena_profile_edit' profile.user.username %}">Edit my Account</a>
                         </li>
                         <li>
                             <a href="{% url 'reminder_settings' %}">Edit Reminder Settings</a>
