--- a/alpha/accounts/templates/userena/profile_form.html
+++ b/alpha/accounts/templates/userena/profile_form.html
@@ -17,8 +17,8 @@
 <form action="" enctype="multipart/form-data" method="post">
     <div class="tabs-container">
         <ul class="tabs right-tabs">
-            <li class="first"><a href="{% url 'account_profile_detail' user.username %}"><span>{% trans 'View profile' %}</span></a></li>
-            <li class="current"><a href="{% url 'user_profile_edit' user.username %}">{% trans "Edit profile" %}</a></li>
+            <li class="first"><a href="{% url 'userena_profile_detail' user.username %}"><span>{% trans 'View profile' %}</span></a></li>
+            <li class="current"><a href="{% url 'userena_profile_edit' user.username %}">{% trans "Edit profile" %}</a></li>
             <li><a href="{% url 'userena_password_change' user.username %}">{% trans "Change password" %}</a></li>
             <li class="last"><a href="{% url 'userena_email_change' user.username %}">{% trans "Change email" %}</a></li>
         </ul>
