--- a/alpha/accounts/templates/userena/profile_list.html
+++ b/alpha/accounts/templates/userena/profile_list.html
@@ -8,8 +8,8 @@
 <ul id="profile_list">
   {% for profile in profile_list %}
   <li>
-  <a href="{% url 'account_profile_detail' profile.user.username %}"><img src="{{ profile.get_mugshot_url }}" /></a>
-  <a href="{% url 'account_profile_detail' profile.user.username %}">{{ profile.user.username }}</a>
+  <a href="{% url 'userena_profile_detail' profile.user.username %}"><img src="{{ profile.get_mugshot_url }}" /></a>
+  <a href="{% url 'userena_profile_detail' profile.user.username %}">{{ profile.user.username }}</a>
   </li>
   {% endfor %}
 
