Refactor event creating. Do not hide location when venue account was selected

--- a/alpha/accounts/templates/accounts/orders.html
+++ b/alpha/accounts/templates/accounts/orders.html
@@ -24,7 +24,7 @@
 {% block page %}
     <div class="primary-content">
         <h1>
-            <a href="{% url 'account_profile_detail' account.user.username %}">
+            <a href="{% url 'userena_profile_detail' account.user.username %}">
                 {{ account.user.username }} orders
             </a>            
         </h1>
