--- a/alpha/accounts/templates/venue_accounts/create_venue_account.html
+++ b/alpha/accounts/templates/venue_accounts/create_venue_account.html
@@ -145,6 +145,15 @@
                             <tr>
                                 <td></td>
                                 <td>
+                                    Street number:
+                                </td>
+                                <td>
+                                    {{ form.street_number }}
+                                </td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>
                                     City:
                                 </td>
                                 <td>
