--- a/alpha/event/templates/events/create/create_event.html
+++ b/alpha/event/templates/events/create/create_event.html
@@ -136,6 +136,8 @@
                     </div>
                     {% endif %}
                     <!-- end errors -->
+
+                    {{ form.linking_venue_mode }}
                     <table>
                         <tr>
                             <td class="create-event-td">
@@ -170,7 +172,7 @@
                                 </div>
                             </td>
                             <td>
-                                {{ form.venue_account_owner }}
+                                {{ form.venue_account_owner }}                                
                             </td>
                         </tr>
                         <tr class="location-tr">
