--- a/alpha/event/templates/events/event_detail_page.html
+++ b/alpha/event/templates/events/event_detail_page.html
@@ -109,7 +109,7 @@
                             {% endif %}
                             <tr>
                                 <td>
-                                    <a href="javascript:void()" class="action-remind-me accented" data-event-id="{{ event.event_identifier }}">Remind Me</a>
+                                    <a href="javascript:void(0);" class="action-remind-me accented" data-single-event-id="{{ event.id }}">Remind Me</a>
                                     {% remind_me_popup event %}
                                 </td>
                                 <td class="in-the-loop-td">
