--- a/alpha/advertising/templates/advertising/stats/stats.html
+++ b/alpha/advertising/templates/advertising/stats/stats.html
@@ -43,11 +43,11 @@
                     <td data-stat-key="clicks">{{ ad.clicks }}</td>
                 </tr>
                 <tr>
-                    <td>Ammount Spend:</td>
+                    <td>Amount Spent:</td>
                     <td data-stat-key="spent">{{ ad.campaign.ammount_spent }}</td>
                 </tr>
                 <tr>
-                    <td>Ammount Remaining:</td>
+                    <td>Amount Remaining:</td>
                     <td  data-stat-key="remaining">{{ ad.campaign.ammount_remaining }}</td>
                 </tr>
             </table>
