--- a/alpha/accounts/templates/accounts/emails/_events.html
+++ b/alpha/accounts/templates/accounts/emails/_events.html
@@ -14,7 +14,9 @@
                     <td width="60" valign="top">
                         <div style="border: 1px solid #cccccc;">
                             <div style="border: 4px solid #ffffff;">
-                                <img src="{% if event.picture %}{{site}}{% cropped_thumbnail event "cropping" width=61 %}{% else %}{{site}}{{STATIC_URL}}images/default-event-61x61.jpg{% endif %}" style="display: block;"/>
+                                <a target="_blank" href="{{site}}{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}" style="text-decoration:none; border: none; display: block; line-height:0px;">
+                                    <img src="{% if event.picture %}{{site}}{% cropped_thumbnail event "cropping" width=61 %}{% else %}{{site}}{{STATIC_URL}}images/default-event-61x61.jpg{% endif %}" style="display: block;"/>
+                                </a>
                             </div>
                         </div>
                     </td>
@@ -42,7 +44,7 @@
 
                         <div>
                             <span class="appleLinksBlack" style="color: #000000; font-size: 12px; font-weight: bold; font-family: sans-serif;">
-                                {{ event.venue.name }}, {{ event.venue.street }}, {{ event.venue.city.name_std }}
+                                {{ event.venue.name }}, {% if event.venue.street %}{% if event.venue.street_number %}{{ event.venue.street_number }} {% endif %}{{ event.venue.street }}, {% endif %}{{ event.venue.city.name_std }}
                             </span>
                         </div>
                     </td>
