Advertising now will be shown only for user in region he is interested in

--- a/alpha/accounts/templates/accounts/emails/reminder_email.html
+++ b/alpha/accounts/templates/accounts/emails/reminder_email.html
@@ -48,14 +48,8 @@
                                 </td>
                                 
                                 <td width="10"><div style="line-height:0;"><img src="{{site}}{{STATIC_URL}}images/emails/blank.gif" width="10" height="10" alt="" /></div></td>
-                                
-                                <td valign="top">
-                                    <div style="border: 1px solid #cccccc;">
-                                        <div style="border: 3px solid #ffffff; border-left: 10px solid #ffffff;">
-                                            <img src="{{site}}{{STATIC_URL}}images/adds/adds_120x601.png">
-                                        </div>
-                                    </div>
-                                </td>
+
+                                {% include 'accounts/emails/_right_ads.html' %}
                             </tr>
                             <tr><td height="10"><div style="line-height:0;"><img src="{{site}}{{STATIC_URL}}images/emails/blank.gif" width="10" height="10" alt="" /></div></td></tr>
 
