--- a/alpha/accounts/templates/accounts/emails/_bottom_ads.html
+++ b/alpha/accounts/templates/accounts/emails/_bottom_ads.html
@@ -1,3 +1,4 @@
+{% load advertising_tags %}
 <!-- Ads & social -->
 <tr>
     <td colspan="3">
@@ -12,7 +13,7 @@
 
             <tr>
                 <td align="center">
-                    <img src="{{site}}{{STATIC_URL}}images/adds/adds_472x58.png">
+                    {% advertising "468x60" %}
                 </td>
             </tr>
 
