Show all advertising campaign in cityfusion admin, admin will be able to edit all campaigns that was created by other users

--- a/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-list.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-list.html
@@ -16,7 +16,7 @@
         <div class="box visible options">
             <ul class="tabs">
                 <li class="current">
-                    <span>Admin advertising</span>
+                    <span>Advertising list</span>
                 </li>
                 <li>
                     <a href="{% url 'admin_advertising_setup' %}"><span>Create new campaign</span></a>
