--- a/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-review.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-review.html
@@ -17,7 +17,7 @@
         <div class="box visible options">
             <ul class="tabs">
                 <li>
-                    <a href="{% url 'admin_advertising' %}"><span>Admin advertising</span></a>
+                    <a href="{% url 'admin_advertising' %}"><span>Advertising list</span></a>
                 </li>
                 <li>
                     <a href="{% url 'admin_advertising_setup' %}"><span>Create new campaign</span></a>
