--- a/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-setup.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-setup.html
@@ -18,7 +18,7 @@
         <div class="box visible options">
             <ul class="tabs">
                 <li>
-                    <a href="{% url 'admin_advertising' %}"><span>Admin advertising</span></a>
+                    <a href="{% url 'admin_advertising' %}"><span>Advertising list</span></a>
                 </li>
                 <li class="current">
                     <span>Create new campaign</span>
