--- a/alpha/advertising/templates/advertising/stats/admin-advertising-campaigns.html
+++ b/alpha/advertising/templates/advertising/stats/admin-advertising-campaigns.html
@@ -6,7 +6,9 @@
     <table class="profile-table" celpadding="0" cellspacing="0">
         <tr>
             <th class="action">Campaign Name</th>
+            <th class="action">Owner</th>
             <th class="action">Ads(Impressions/Clicks)</th>
+            <th class="action">Regions</th>
             <th class="action">Edit</th>
             <th class="action">Remove</th>
         </tr>        
@@ -14,6 +16,9 @@
         <tr>
             <td class="action">
                 {{ campaign.name }}
+            </td>
+            <td>
+                <a href="{% url "admin:accounts_account_change" campaign.account.id %}" target="_blank">{{ campaign.account.user.username }}</a>
             </td>
             <td class="action">
                 {% for ad in campaign.advertising_set.all %}
@@ -23,7 +28,15 @@
                     <a href="{% url 'admin_advertising_remove_ad' ad.id %}" class="danger">Remove ad</a>
                     <br>
                 {% endfor %}
-            </td>            
+            </td>
+            <td class="action">
+                {% if campaign.all_of_canada %}
+                    All of Canada
+                {% else %}
+                    {{ campaign.regions_representation }}
+                {% endif %}
+
+            </td>
             <td class="action">
                 <a href="{% url 'admin_advertising_edit_campaign' campaign.id %}">
                     Edit campaign
